# av-ros-gym

./: .gitmodules  README.md  setup.bash
src/ros_gym/: package.xml  setup.cfg  setup.py
src/ros_gym/launch/: reset_gym.launch.py
src/ros_gym/ros_gym/: reset_client_node.py  reset_service_node.py  reset_spawn_node.py  ros_gym_node.py
src/ros_gym/ros_gym/config/: carla_params.yaml
src/sceneexp_utils/: CMakeLists.txt  README.md  package.xml
src/sceneexp_utils/cone_maps/: acceleration.csv  boa_constrictor.csv  bone.csv  calibration_grid.csv  calibration_grid_upper.csv  example-track.csv  garden-light.csv  hairpins.csv  its_a_mess.csv  peanut.csv  rand.csv  rectange.csv  skidpad.csv  small_track.csv  transform_cone_map.py
src/sceneexp_utils/launch/: custom.launch.py  software_stack_cli.launch.py  software_stack_impl.launch.py
src/sceneexp_utils/sceneexp_utils/: launch_file_utilities.py  setup.cfg
src/sceneexp_utils/src/: transform_from_odom.cpp
